force-app/main/default/objects/SS_Integration_Tracking__c/SS_Integration_Tracking__c.object-meta.xml
<CustomObject>
    <label>Integration Tracking</label>
    <nameField>
        <displayFormat>INT-{000}</displayFormat>
        <label>Integration Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>