force-app/main/default/objects/SS_Integration_Tracking__c/fields/Interface_Type__c.field-meta.xml
<CustomField>
    <fullName>Interface_Type__c</fullName>
    <label>Interface Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>