force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_End_Point__c.field-meta.xml
<CustomField>
    <fullName>SS_End_Point__c</fullName>
    <label>End Point</label>
    <type>TextArea</type>
</CustomField>