force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SS_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>