force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_Related_to_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_Related_to_Id__c</fullName>
    <label>Related to Id</label>
    <type>TextArea</type>
</CustomField>