force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_Related_to_Name__c.field-meta.xml
<CustomField>
    <fullName>SS_Related_to_Name__c</fullName>
    <label>Related to Name</label>
    <type>TextArea</type>
</CustomField>