force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>SS_Request_Body__c</fullName>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>