force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_Request_Method__c.field-meta.xml
<CustomField>
    <fullName>SS_Request_Method__c</fullName>
    <label>Request Method</label>
    <type>TextArea</type>
</CustomField>