force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_Status__c.field-meta.xml
<CustomField>
    <fullName>SS_Status__c</fullName>
    <label>Status</label>
    <type>TextArea</type>
</CustomField>