force-app/main/default/objects/SS_Integration_Tracking__c/fields/SS_Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey_Name__c</fullName>
    <label>Survey Name</label>
    <type>TextArea</type>
</CustomField>